--- a/index.html
+++ b/index.html
@@ -19,15 +19,19 @@
 </head>
 <body>
     <div class="center">
-        <h1>About Me</h1>
+        <h1>Rissa Iquina</h1>
         <img src="./rissa.jpg" alt="rissa" width="300" height="400" class="bordered-image">
-        <h2>Rissa Iquina</h2>
+        <h2>In front of the Coachella Ferris Wheel</h2>
         <main>
             <h4>Short Bio</h4>
             <ul>
-                <li>Born in Manila Philippines</li>
-                <li>Favorite Things</li>
-                <li>Not Favorite Things</li>
+                <li>1984: Born in Manila Philippines</li>
+                <li>1989: Moved to Singapore/Hong Kong</li>
+                <li>1994: Moved to Kobe,Japan</li>
+                <li>1996: Moved to Cincinnati</li>
+                <li>2008: Moved To NYC</li>
+                <li>2009: Settled in Cincinnati</li>
+
             </ul>
         </main>
     </div>
