Updated index.html with new link buttons and timeline

--- a/education.html
+++ b/education.html
@@ -1,11 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<title>Education</title>
+<style>
+body {
+  font-family: 'Gill Sans';
+  background-color: #f0f0f0;
+  background-image: url('https://images.pexels.com/photos/1939485/pexels-photo-1939485.jpeg'); 
+  background-size: cover;
+  background-position: center;
+  color: #333;
+  text-align: center;
+}
+
+h1 {
+  font-family: 'Gill Sans';
+  font-size: 5em;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.education {
+  margin-top: 30px;
+  text-align: left;
+  color: black;
+}
+
+}
+
+.photo-container {
+  width: auto;
+  border: 8px solid #ccc;
+  border-radius: 5px;
+ 
+}
+
+.photo {
+  width: 100%;
+}
+.button {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 10px;
+            background-color: #007BFF; /* Blue background */
+            color: #fff; /* White text */
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .button:hover {
+            background-color: #0056b3; /* Darker blue on hover */
+        }
+</style>
 </head>
 <body>
+
+<div class="container">
+  <h1>Education</h1>
+
+  <div class="photo-container">
+    <img class="photo" src="./UC pic.jpeg" alt="University of Cincinnati"> </div>
+
+  <section class="education">
+    <h2><em>Education History</em></h2>
+      <h2>Kable Academy</h2>
+      <ul>
+        <li>Cincinnati, OH</li>
+        <li>AI Coding</li>
+        <li>2025 - In Progress</li>
+      </ul>
+    </ul>
     
+      <h2>University of Cincinnati</h2>
+      <ul>
+       <li>Cincinnati, OH</li>
+       <li>Early Childhood Education</li>
+       <li>2008, Bachelor of Science in Education</li>
+      </div>
+    </div>
+  
+    </div>
+  </section>
+
+</div>
+<div class="link-buttons">
+    <a href="https://www.example.com" class="button">Example Link 1</a>
+    <a href="https://www.anotherexample.com" class="button">Example Link 2</a>
+</div>
 </body>
 </html>
