--- a/jobs.html
+++ b/jobs.html
@@ -1,11 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<title>My Resume</title>
+<style>
+body {
+    font-family: 'Gill Sans';
+  background-color: #f0f0f0;
+  background-image: url('https://images.pexels.com/photos/1939485/pexels-photo-1939485.jpeg'); 
+  background-size: cover;
+  background-position: center;
+  color: #333;
+  text-align: center;
+}
+
+h1 {
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.photo-container {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.photo-frame {
+  border: 5px solid #fff;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+img {
+  max-width: 100%;
+  border-radius: 5px;
+}
+
+.job-section {
+  margin-bottom: 20px;
+}
+
+.job-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: tan;
+}
+
+.job-location {
+    font-size: 1rem;
+    font-weight: bold;
+    color: darkslategrey;
+}
+
+.job-responsibilities {
+  margin-top: 10px;
+}
+
+.job-responsibility {
+  margin-bottom: 5px;
+  text-align: left;
+  font-style: italic;
+}
+</style>
+
 </head>
 <body>
-    
+
+<h1>Jobs History</h1>
+
+<div class="photo-container">
+  <div class="photo-frame">
+    <img src="./classphoto.jpg" alt="Your Photo">
+  </div>
+</div>
+
+<div class="job-section">
+  <h2 class="job-title">Assistant Manager, Maya Gallery</h2>
+  <span class="job-location">Cincinnati OH 2022-2024</span>
+  <ul class="job-responsibilities">
+    <li class="job-responsibility">Customer-facing duties not limited to: sales, inventory, online correspondence</li>
+    <li class="job-responsibility">Detailed knowledge of history, artist techniques, and materials of indigenous Native-American and Mayan art</li>
+   
+  </ul>
+</div>
+
+<div class="job-section">
+  <h2 class="job-title">Self-Employed, Early Childhood Educator</h2>
+  <span class="job-location">Cincinnati OH 2013-2021</span>
+  <ul class="job-responsibilities">
+    <li class="job-responsibility">RBalanced a multitude of daily tasks including scheduling, activity and lesson planning and implementation, recording and documentation, and consistent communication with clients in an efficient manner.</li>
+    <li class="job-responsibility">RPersonally selected by corporate executives, fellow educators and PhD graduates to attend to their families.</li>
+    <li class="job-responsibility">RFacilitated seamless communication with clients, committed to continuous improvement and client satisfaction.</li>
+  </ul>
+</div>
+
+<div class="job-section">
+  <h2 class="job-title">First Grade Teacher, Impact Academy</h2>
+  <span class="job-location">Cincinnati, OH 2011-2012</span>
+  <ul class="job-responsibilities">
+    <li class="job-responsibility">Managed a classroom of students of a varied spectrum of achievement and grade level to create a synergistic community that broadened cultural and educational horizons. Planned and implemented a rigorous curriculum adhering to State standards.</li>
+  </ul>
+</div>
+
+<div class="job-section">
+  <h2 class="job-title">Preschool Teacher, Bright Horizons</h2>
+  <span class="job-location">Cincinnati, OH 2009-2011</span>
+  <ul class="job-responsibilities">
+    <li class="job-responsibility">Selected by administration to lead workshops with fellow colleagues on best practices for client (parent-teacher) relations./li>
+    <li class="job-responsibility">argeted by administration to intake high-needs students of various backgrounds (international to special needs) due to professional and interpersonal standards.</li>
+    <li class="job-responsibility">Precise and tailored classroom management for a class of 20, team-taught with assistant educator and dedicated focus to high levels of classroom engagement, discipline and individual improvement.</li>
+  </ul>
+</div>
+
 </body>
 </html>
