--- a/index.html
+++ b/index.html
@@ -4,36 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <header>
+        <div class="link-buttons">
+            <a href="./jobs.html" class="button">Job History</a>
+            <a href="./education.html" class="button">Education</a>
+        </div>
+    </header>
     <style>
         body {
-            background-color: lightblue;
-        }
-        .center {
+            font-family: 'Gill Sans';
+            font-size: larger;
+            background-color: #f0f0f0;
+            background-image: url('https://images.pexels.com/photos/1939485/pexels-photo-1939485.jpeg'); 
+            background-size: cover;
+            background-position: center;
+            color: #333;
             text-align: center;
         }
-        .bordered-image {
-            border: 25px solid black;
-            border-radius: 10px;
+        .border-image {
+            border: 8px solid rgba(167, 178, 162, 0.496); 
+            border-radius: 40px;
+        }
+        .h2 {
+            color: tan;
+            font-size: smaller;
+        }
+        .timeline {
+            text-align: left; 
+        }
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 10px;
+            background-color: tan; /* Blue background */
+            color: #fff; /* White text */
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .button:hover {
+            background-color: #0056b3; /* Darker blue on hover */
         }
     </style>
 </head>
+<header></header>
 <body>
-    <div class="center">
+    <div class="body">
         <h1>Rissa Iquina</h1>
-        <img src="./rissa.jpg" alt="rissa" width="300" height="400" class="bordered-image">
-        <h2>In front of the Coachella Ferris Wheel</h2>
-        <main>
-            <h4>Short Bio</h4>
-            <ul>
-                <li>1984: Born in Manila Philippines</li>
-                <li>1989: Moved to Singapore/Hong Kong</li>
-                <li>1994: Moved to Kobe,Japan</li>
-                <li>1996: Moved to Cincinnati</li>
-                <li>2008: Moved To NYC</li>
-                <li>2009: Settled in Cincinnati</li>
+        <img src="./rissa.jpg" alt="rissa" width="300" height="400" class="border-image">
 
-            </ul>
-        </main>
+    <div class="h2">
+        <h2><em>"Travel is food for the soul"</em></h2>
+    </div>
+        <h3>Short Bio</h3>
+            <div class="timeline">
+                <ul>
+                    <li>1984: Born in Manila Philippines</li>
+                    <li>1989: Moved to Singapore/Hong Kong</li>
+                    <li>1994: Moved to Kobe, Japan</li>
+                    <li>1996: Moved to Cincinnati</li>
+                    <li>2008: Moved To NYC</li>
+                    <li>2009: Settled in Cincinnati</li>
+                </ul>
+       
     </div>
 </body>
 </html>
