correct input and spelling errors

--- a/jobs.html
+++ b/jobs.html
@@ -88,9 +88,9 @@ img {
   <h2 class="job-title">Self-Employed, Early Childhood Educator</h2>
   <span class="job-location">Cincinnati OH 2013-2021</span>
   <ul class="job-responsibilities">
-    <li class="job-responsibility">RBalanced a multitude of daily tasks including scheduling, activity and lesson planning and implementation, recording and documentation, and consistent communication with clients in an efficient manner.</li>
-    <li class="job-responsibility">RPersonally selected by corporate executives, fellow educators and PhD graduates to attend to their families.</li>
-    <li class="job-responsibility">RFacilitated seamless communication with clients, committed to continuous improvement and client satisfaction.</li>
+    <li class="job-responsibility">Balanced a multitude of daily tasks including scheduling, activity and lesson planning and implementation, recording and documentation, and consistent communication with clients in an efficient manner.</li>
+    <li class="job-responsibility">Personally selected by corporate executives, fellow educators and PhD graduates to attend to their families.</li>
+    <li class="job-responsibility">Facilitated seamless communication with clients, committed to continuous improvement and client satisfaction.</li>
   </ul>
 </div>
 
