--- a/education.html
+++ b/education.html
@@ -14,12 +14,12 @@ body {
 }
 
 h1 {
+  font-size: 50px;
+  font-weight: bolder;
   font-family: 'Gill Sans';
-  font-size: 5em;
   margin-bottom: 20px;
   text-align: center;
 }
-
 .education {
   margin-top: 30px;
   text-align: left;
@@ -50,38 +50,33 @@ f
         }
 
         .button:hover {
-            background-color: #0056b3; /* Darker blue on hover */
+            background-color: #0056b3; 
         }
 </style>
 </head>
 <body>
-
-<div class="container">
+<div class="h1">
   <h1>Education</h1>
 
   <div class="photo-container">
-    <img class="photo" src="./UC pic.jpeg" alt="University of Cincinnati"> </div>
+    <img class="photo" src="./UC pic.jpeg" alt="University of Cincinnati"> 
+  </div>
 
-  <section class="education">
-    <h2><em>Education History</em></h2>
-      <h2>Kable Academy</h2>
+    <div class="body">
+    <h2><em>Education History</em><h2>
+      <h3>Kable Academy</h3>
       <ul>
         <li>Cincinnati, OH</li>
         <li>AI Coding</li>
         <li>2025 - In Progress</li>
       </ul>
-    </ul>
     
-      <h2>University of Cincinnati</h2>
+      <h3>University of Cincinnati<h3>
       <ul>
        <li>Cincinnati, OH</li>
        <li>Early Childhood Education</li>
        <li>2008, Bachelor of Science in Education</li>
-      </div>
-    </div>
   
-    </div>
-  </section>
 
 </div>
 </body>
