--- a/jobs.html
+++ b/jobs.html
@@ -4,21 +4,15 @@
 <title>My Resume</title>
 <style>
 body {
-    font-family: 'Gill Sans';
-  background-color: #f0f0f0;
-  background-image: url('https://images.pexels.com/photos/1939485/pexels-photo-1939485.jpeg'); 
-  background-size: cover;
-  background-position: center;
-  color: #333;
-  text-align: center;
-}
-
-h1 {
-  font-size: 2rem;
-  font-weight: bold;
-  text-align: center;
-  margin-bottom: 20px;
-}
+            font-family: 'Gill Sans';
+            font-size: larger;
+            background-color: #f0f0f0;
+            background-image: url('https://images.pexels.com/photos/1939485/pexels-photo-1939485.jpeg'); 
+            background-size: cover;
+            background-position: center;
+            color: #333;
+            text-align: center;
+        }
 
 .photo-container {
   text-align: center;
@@ -107,7 +101,7 @@ img {
   <span class="job-location">Cincinnati, OH 2009-2011</span>
   <ul class="job-responsibilities">
     <li class="job-responsibility">Selected by administration to lead workshops with fellow colleagues on best practices for client (parent-teacher) relations./li>
-    <li class="job-responsibility">argeted by administration to intake high-needs students of various backgrounds (international to special needs) due to professional and interpersonal standards.</li>
+    <li class="job-responsibility">Targeted by administration to intake high-needs students of various backgrounds (international to special needs) due to professional and interpersonal standards.</li>
     <li class="job-responsibility">Precise and tailored classroom management for a class of 20, team-taught with assistant educator and dedicated focus to high levels of classroom engagement, discipline and individual improvement.</li>
   </ul>
 </div>
