--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+
     <title>About Me</title>
-    <header>
-        <div class="link-buttons">
-            <a href="./jobs.html" class="button">Job History</a>
-            <a href="./education.html" class="button">Education</a>
-        </div>
-    </header>
+    <head><link rel="stylesheet" href="./aboutme.css">
+    </head>
     <style>
+        h1{
+            font-size: 50px;
+            font-weight: bolder;
+            font-family: 'Gill Sans';
+        }
         body {
             font-family: 'Gill Sans';
             font-size: larger;
@@ -37,21 +38,29 @@
             display: inline-block;
             padding: 10px 20px;
             margin: 10px;
-            background-color: tan; /* Blue background */
-            color: #fff; /* White text */
+            background-color: tan; 
+            color: #fff; 
             text-align: center;
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
         .button:hover {
-            background-color: #0056b3; /* Darker blue on hover */
+            background-color: grey; /
         }
     </style>
+    <header>
+        <div class="link-buttons">
+            <a href="./jobs.html" class="button">Job History</a>
+            <a href="./education.html" class="button">Education</a>
+            <link rel="stylesheet" href="./aboutme.css">
+        </div>
+    </header>
+
 </head>
 <header></header>
 <body>
-    <div class="body">
+    <div class="h1">
         <h1>Rissa Iquina</h1>
         <img src="./rissa.jpg" alt="rissa" width="300" height="400" class="border-image">
 
