--- a/jobs.html
+++ b/jobs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My Resume</title>
+<title>Job History</title>
 <style>
 body {
             font-family: 'Gill Sans';
