--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>About Me</title>
-    <head><link rel="stylesheet" media="screen and (max-width:480px)" href="./mobile.css">  <link rel="stylesheet" media="screen and (min-width:480px)" href="./style.css"></head>
+    <head><link rel="stylesheet" media="screen and (max-width:480px)" href="./mobile.css">  <link rel="stylesheet" media="screen and (max-width:480px)" href="./style.css"></head>
     <style>
         h1{
             font-size: 50px;
