--- a/index.html
+++ b/index.html
@@ -1,40 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>About Me</title>
-    <link rel="stylesheet" media="screen and (max-width:480px)" href="./style.css"> 
+    <link rel="stylesheet" href="./style.css">
+
 </head>
+
 <header>
-        <div class="link-buttons">
-            <a href="./jobs.html" class="button">Job History</a>
-            <a href="./education.html" class="button">Education</a>
-        </div>
+    <div class="link-buttons">
+        <a href="./jobs.html" class="button">Job History</a>
+        <a href="./education.html" class="button">Education</a>
+    </div>
 </header>
 
-</head>
-<header></header>
 <body>
-    <div class="h1">
+    <div class="content-wrapper">
         <h1>Rissa Iquina</h1>
-        <img src="./rissa.jpg" alt="rissa" width="300" height="400" class="border-image">
+        <div class="image-container">
+            <img src="./assets/rissa.jpg" alt="Rissa Iquina">
+        </div>
 
-    <div class="h2">
-        <h2><em>"Travel is food for the soul"</em></h2>
-    </div>
-        <h3>Short Bio</h3>
-            <div class="timeline">
-                <ul>
-                    <li>1984: Born in Manila Philippines</li>
-                    <li>1989: Moved to Singapore/Hong Kong</li>
-                    <li>1994: Moved to Kobe, Japan</li>
-                    <li>1996: Moved to Cincinnati</li>
-                    <li>2008: Moved To NYC</li>
-                    <li>2009: Settled in Cincinnati</li>
-                </ul>
-       
+        <div class="h2">
+            <h2>"Travel is food for the soul"</h2>
+        </div>
+
+        <h3>A Brief Timeline</h3>
+        <p class="caption">It's been my great experience to be able to see the world and live with a host of
+            different
+            cultures and countries as my childhood backdrop; these experiences have led me to a deep
+            appreciation for
+            the value that seeing myself as a global citizen, brings into my daily life, my ethos, and my
+            interactions
+            with everyone I meet.</p>
+
+        <div class="timeline">
+            <ul>
+
+                <li>
+                    <div class="event">
+                        <span class="year">1984</span>
+                        <div class="description">
+                            <p class="subtitle">Born in Manila, Philippines</p>
+                            <p class="caption">It was a hot sunny Monday that marked by my arrival into the
+                                world, in
+                                the vibrant city of Manila. This laid the foundation for a life of diverse
+                                experiences
+                                and global travels.nd adaptability.</p>
+                        </div>
+                    </div>
+                    <div class="event">
+                        <span class="year">1989</span>
+                        <div class="description">
+                            <p class="subtitle">Moved to Singapore / Hong Kong</p>
+                            <p class="caption">My family relocated, exposing me to the dynamic cultures of both
+                                Singapore and Hong Kong. This period instilled in me an appreciation for
+                                multiculturalism and adaptability.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="event">
+                        <span class="year">1995</span>
+                        <div class="description">
+                            <p class="subtitle">Moved to Kobe, Japan</p>
+                            <p class="caption">The serene beauty and unique culture of Kobe became my home for a
+                                time.
+                                This experience fostered a sense of global citizenship and broadened my
+                                perspective.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="event">
+                        <span class="year">1996</span>
+                        <div class="description">
+                            <p class="subtitle">Moved to Cincinnati</p>
+                            <p class="caption">A new chapter began as I moved to Cincinnati, Ohio. This marked a
+                                transition to a different pace of life and culture as I grew into my own.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="event">
+                        <span class="year">2008</span>
+                        <div class="description">
+                            <p class="subtitle">Moved to NYC</p>
+                            <p class="caption">Post-graduation, the energy and excitement of New York City
+                                beckoned,
+                                leading me to experience life in one of the world's most iconic cities. This
+                                period was
+                                filled with personal and professional growth.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="event">
+                        <span class="year">2009</span>
+                        <div class="description">
+                            <p class="subtitle">Settled in Cincinnati</p>
+                            <p class="caption">Returning to Cincinnati, I married my now-husband, established
+                                roots and
+                                built a home. This city became a place of stability and community.</p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
     </div>
 </body>
+
+
+
 </html>
