--- a/index.html
+++ b/index.html
@@ -18,24 +18,21 @@
 </header>
 
 <body>
-    <div class="content-wrapper">
+        <div class="content-wrapper">
+            <h2>Get to Know...</h2>
         <h1>Rissa Iquina</h1>
         <div class="image-container">
             <img src="./assets/rissa.jpg" alt="Rissa Iquina">
         </div>
 
         <div class="h2">
-            <h2>"Travel is food for the soul"</h2>
+            <h2>"Every form of art is another way of seeing the world."</h2>
         </div>
 
         <h3>A Brief Timeline</h3>
-        <p class="caption">It's been my great experience to be able to see the world and live with a host of
-            different
-            cultures and countries as my childhood backdrop; these experiences have led me to a deep
-            appreciation for
-            the value that seeing myself as a global citizen, brings into my daily life, my ethos, and my
-            interactions
-            with everyone I meet.</p>
+        <p class="caption">Seeing the world from many perspective, through different cultures, languages, and flavors,
+            it has become a valuable part of Rissa's outlook, in how she not only interacts with the world, but helps
+            shape it.</p>
 
         <div class="timeline">
             <ul>
@@ -45,19 +42,18 @@
                         <span class="year">1984</span>
                         <div class="description">
                             <p class="subtitle">Born in Manila, Philippines</p>
-                            <p class="caption">It was a hot sunny Monday that marked by my arrival into the
-                                world, in
-                                the vibrant city of Manila. This laid the foundation for a life of diverse
-                                experiences
-                                and global travels.nd adaptability.</p>
+                            <p class="caption">It was a hot sunny Monday that marked her arrival into the
+                                world, in the vibrant city of Manila. This laid the foundation for a life of diverse
+                                experiences and global travels, although she would soon leave her birthplace.</p>
                         </div>
                     </div>
                     <div class="event">
                         <span class="year">1989</span>
                         <div class="description">
                             <p class="subtitle">Moved to Singapore / Hong Kong</p>
-                            <p class="caption">My family relocated, exposing me to the dynamic cultures of both
-                                Singapore and Hong Kong. This period instilled in me an appreciation for
+                            <p class="caption">Rissa's international journey started in Singapore, but after only a
+                                short time quickly relocated again, exposing her to the dynamic cultures of both
+                                Singapore and Hong Kong. This period instilled in her an appreciation for
                                 multiculturalism and adaptability.</p>
                         </div>
                     </div>
@@ -67,9 +63,9 @@
                         <span class="year">1995</span>
                         <div class="description">
                             <p class="subtitle">Moved to Kobe, Japan</p>
-                            <p class="caption">The serene beauty and unique culture of Kobe became my home for a
+                            <p class="caption">The serene beauty and unique culture of Kobe became Rissa's home for a
                                 time.
-                                This experience fostered a sense of global citizenship and broadened my
+                                This experience fostered a sense of global citizenship and broadened her
                                 perspective.</p>
                         </div>
                     </div>
@@ -79,8 +75,8 @@
                         <span class="year">1996</span>
                         <div class="description">
                             <p class="subtitle">Moved to Cincinnati</p>
-                            <p class="caption">A new chapter began as I moved to Cincinnati, Ohio. This marked a
-                                transition to a different pace of life and culture as I grew into my own.</p>
+                            <p class="caption">A new chapter began as she moved to Cincinnati, Ohio. This marked a
+                                transition to a different pace of life and culture as she grew up.</p>
                         </div>
                     </div>
                 </li>
@@ -89,11 +85,9 @@
                         <span class="year">2008</span>
                         <div class="description">
                             <p class="subtitle">Moved to NYC</p>
-                            <p class="caption">Post-graduation, the energy and excitement of New York City
-                                beckoned,
-                                leading me to experience life in one of the world's most iconic cities. This
-                                period was
-                                filled with personal and professional growth.</p>
+                            <p class="caption">Post-graduation, the energy and excitement of New York City beckoned,
+                                leading Rissa to experience life in one of the world's most iconic cities. This
+                                period was               filled with personal and professional growth.</p>
                         </div>
                     </div>
                 </li>
@@ -102,7 +96,7 @@
                         <span class="year">2009</span>
                         <div class="description">
                             <p class="subtitle">Settled in Cincinnati</p>
-                            <p class="caption">Returning to Cincinnati, I married my now-husband, established
+                            <p class="caption">Returning to Cincinnati, she married her now-husband, Ronnie, established
                                 roots and
                                 built a home. This city became a place of stability and community.</p>
                         </div>
